--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
   </div>
 </div>
 
-<div id="portfolio" class="container-fluid text-center bg-odd">
-  <h2 class="heading">PORTFOLIO</h2>
-  <div class="row">
+<div id="portfolio" class="container-fluid bg-odd">
+  <h2 class="heading text-center">PORTFOLIO</h2>
+  <div class="row text-center">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="https://image.ibb.co/hz5bX5/panjaang.png" width="400" height="400">
+        <img src="https://image.ibb.co/hz5bX5/panjaang.png">
         <h4><a href="http://panjaang.ga" target="_blank">Panjaang.ga</a></h4>
         <p>Website for extending URL with unique & funny URL.</p>
       </div>
@@ -65,8 +65,8 @@
   </div>
 </div>
 
-<footer class="container-fluid text-center">
-  <p>Made with love by me, <a href="https://github.com/fannyhasbi">Fanny Hasbi</a></p>
+<footer class="container-fluid">
+  <p class="text-center">Made with love by me, <a href="https://github.com/fannyhasbi">Fanny Hasbi</a></p>
 </footer>
 
 </body>
