--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <h1>Fanny Hasbi</h1>
   <p><i>Simple person who loves programming.</i></p>
   <a href="https://facebook.com/fannyhasbi" target="_blank" class="link"><i class="fa fa-facebook-square fa-2x"></i></a>
-  <a href="https://twitter.com/fannyhasbi" target="_blank" class="link"><i class="fa fa-twitter fa-2x"></i></a>
-  <a href="https://github.com/fannyhasbi" target="_blank" class="link"><i class="fa fa-github fa-2x"></i></a>
   <a href="https://instagram.com/fannyhasbi" target="_blank" class="link"><i class="fa fa-instagram fa-2x"></i></a>
+  <a href="https://github.com/fannyhasbi" target="_blank" class="link"><i class="fa fa-github fa-2x"></i></a>
+  <a href="https://twitter.com/fannyhasbi" target="_blank" class="link"><i class="fa fa-twitter fa-2x"></i></a>
 </div>
 
 <div id="about" class="container-fluid">
@@ -65,7 +65,62 @@
   </div>
 </div>
 
-<footer class="container-fluid">
+<div id="skills" class="container-fluid">
+  <h2 class="heading text-center">SKILLS</h2>
+  <div class="row">
+    <div class="col-sm-6">
+      <h4 class="progress-heading">HTML</h4>
+      <div class="progress">
+        <div class="progress-bar progress-bar-custom-2" style="width: 90%"></div>
+      </div>
+
+      <h4 class="progress-heading">CSS</h4>
+      <div class="progress">
+        <div class="progress-bar progress-bar-custom-4" style="width: 80%"></div>
+      </div>
+
+      <h4 class="progress-heading">Javascript</h4>
+      <div class="progress">
+        <div class="progress-bar progress-bar-custom-1" style="width: 70%"></div>
+      </div>
+
+      <h4 class="progress-heading">PHP</h4>
+      <div class="progress">
+        <div class="progress-bar progress-bar-custom-3" style="width: 93%"></div>
+      </div>
+      
+      <h4 class="progress-heading">SQL</h4>
+      <div class="progress">
+        <div class="progress-bar progress-bar-custom-1" style="width: 93%"></div>
+      </div>
+    </div>
+
+    <div class="col-sm-6">
+      <h4 class="progress-heading">Bootstrap</h4>
+      <div class="progress">
+        <div class="progress-bar progress-bar-custom-2" style="width: 87%"></div>
+      </div>
+
+      <h4 class="progress-heading">Codeigniter</h4>
+      <div class="progress">
+        <div class="progress-bar progress-bar-custom-3" style="width: 83%"></div>
+      </div>
+
+      <h4 class="progress-heading">Node.js</h4>
+      <div class="progress">
+        <div class="progress-bar progress-bar-custom-4" style="width: 50%"></div>
+      </div>
+
+      <h4 class="progress-heading">React.js</h4>
+      <div class="progress">
+        <div class="progress-bar progress-bar-custom-2" style="width: 60%"></div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<footer class="container-fluid bg-odd">
   <p class="text-center">Made with love by me, <a href="https://github.com/fannyhasbi">Fanny Hasbi</a></p>
 </footer>
 
