Make image responsive

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </p>
     </div>
     <div class="col-sm-6 text-center">
-      <img src="https://avatars1.githubusercontent.com/u/11705665?v=4&s=460" alt="Fanny Hasbi" title="Fanny Hasbi" height="350" width="350" style="border-radius: 50%;">
+      <img src="https://avatars1.githubusercontent.com/u/11705665?v=4&s=460" class="img-responsive img-circle" alt="Fanny Hasbi" title="Fanny Hasbi">
     </div>
   </div>
 </div>
