Add Linkedin link

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <a href="https://instagram.com/fannyhasbi" target="_blank" class="link"><i class="fa fa-instagram fa-2x"></i></a>
   <a href="https://github.com/fannyhasbi" target="_blank" class="link"><i class="fa fa-github fa-2x"></i></a>
   <a href="https://twitter.com/fannyhasbi" target="_blank" class="link"><i class="fa fa-twitter fa-2x"></i></a>
+  <a href="https://www.linkedin.com/in/fannyhasbi/" target="_blank" class="link"><i class="fa fa-linkedin-square fa-2x"></i></a>
 </div>
 
 <div id="about" class="container-fluid">
