--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 <div id="header" class="jumbotron text-center">
   <h1>Fanny Hasbi</h1>
-  <p><i>Simple person who loves programming.</i></p>
-  <a href="https://facebook.com/fannyhasbi" target="_blank" class="link"><i class="fa fa-facebook-square fa-2x"></i></a>
+  <p><i>Software Engineering Enthusiast</i></p>
+  <a href="https://www.facebook.com/fannyhasbi" target="_blank" class="link"><i class="fa fa-facebook-square fa-2x"></i></a>
   <a href="https://instagram.com/fannyhasbi" target="_blank" class="link"><i class="fa fa-instagram fa-2x"></i></a>
   <a href="https://github.com/fannyhasbi" target="_blank" class="link"><i class="fa fa-github fa-2x"></i></a>
   <a href="https://twitter.com/fannyhasbi" target="_blank" class="link"><i class="fa fa-twitter fa-2x"></i></a>
@@ -26,15 +26,18 @@
 
 <div id="about" class="container-fluid">
   <div class="row">
-    <div class="col-sm-6">
-      <h2 class="heading text-center">ABOUT ME</h2>
-      <h4 class="handwrite">Hello, my name is Fanny Hasbi. I really love coding :)</h4>
-      <p class="handwrite">
-        I come from Brebes, Indonesia. Now I am in the third semeseter of Computer Engineering at Diponegoro University. My passion in programming is on the server side, and I have experienced in PHP programming and using its frameworks like Codeigniter and Flight. I have learned programming since 2014 with Javascript on my blog, but my blog is now rarely taken care of.
-      </p>
-    </div>
     <div class="col-sm-6 text-center">
       <img src="https://avatars1.githubusercontent.com/u/11705665?v=4&s=460" class="img-responsive img-circle" alt="Fanny Hasbi" title="Fanny Hasbi">
+    </div>
+    <div class="col-sm-6">
+      <h2 class="heading text-center">ABOUT ME</h2>
+      <h3>Hello, my name is Fanny Hasbi. I really love coding :)</h3>
+      <p>
+        I come from Brebes, Indonesia. I am a student of Computer Engineering at Diponegoro University since 2016. I focus on server-side development, and I have experienced in PHP and Javascript with its frameworks. I learned programming since 2014 with Javascript.
+      </p>
+      <p>
+        I have completed several projects from small to large scale. Now, I'm still working on several projects while I am studying new technology. I am really enthusiastic participating in technology events and competitions.
+      </p>
     </div>
   </div>
 </div>
