Change base colors

--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
 <div id="portfolio" class="container-fluid bg-odd">
   <h2 class="heading text-center">PORTFOLIO</h2>
   <div class="row text-center">
-    <div class="col-sm-4">
+    <div class="col-xs-6 col-sm-4">
       <div class="thumbnail">
         <img src="https://image.ibb.co/hz5bX5/panjaang.png">
         <h4><a href="http://panjaang.ga" target="_blank">Panjaang.ga</a></h4>
         <p>Website for extending URL with unique & funny URL.</p>
       </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-xs-6 col-sm-4">
       <div class="thumbnail">
         <img src="https://image.ibb.co/bYgGX5/apotek.png" width="400" height="400">
         <h4><a href="https://github.com/fannyhasbi/apotek">Apotek Online</a></h4>
         <p>Dynamic online pharmacy to sell drugs.</p>
       </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-xs-6 col-sm-4">
       <div class="thumbnail">
         <img src="https://image.ibb.co/fSykQQ/kodepos.png" width="400" height="400">
         <h4><a href="https://github.com/fannyhasbi/kodepos-react" target="_blank">Kode Pos Indonesia</a></h4>
@@ -124,7 +124,7 @@
 </div>
 
 
-<footer class="container-fluid bg-odd">
+<footer class="container-fluid">
   <p class="text-center">Made with love by me, <a href="https://github.com/fannyhasbi">Fanny Hasbi</a></p>
 </footer>
 
