Change all portfolios

--- a/index.html
+++ b/index.html
@@ -47,23 +47,23 @@
   <div class="row text-center">
     <div class="col-xs-6 col-sm-4">
       <div class="thumbnail">
-        <img src="https://image.ibb.co/hz5bX5/panjaang.png">
-        <h4><a href="http://panjaang.ga" target="_blank">Panjaang.ga</a></h4>
-        <p>Website for extending URL with unique & funny URL.</p>
+        <img src="assets/img/bef.png">
+        <h4><a href="https://brebesedufair.org" target="_blank">Brebes Education Fair 2018</a></h4>
+        <p>Multi purpose websites for registration, print card, event data management for committee, participation confirmation using QR Code.</p>
       </div>
     </div>
     <div class="col-xs-6 col-sm-4">
       <div class="thumbnail">
-        <img src="https://image.ibb.co/bYgGX5/apotek.png" width="400" height="400">
-        <h4><a href="https://github.com/fannyhasbi/apotek">Apotek Online</a></h4>
-        <p>Dynamic online pharmacy to sell drugs.</p>
+        <img src="assets/img/metaflorist.png">
+        <h4><a href="http://metaflorist.com" target="_blank">Metaflorist</a></h4>
+        <p>Website to promote the great ability of people with mental disorders. Main features are landing page, admin page, shopping cart, product management.</p>
       </div>
     </div>
     <div class="col-xs-6 col-sm-4">
       <div class="thumbnail">
-        <img src="https://image.ibb.co/fSykQQ/kodepos.png" width="400" height="400">
-        <h4><a href="https://github.com/fannyhasbi/kodepos-react" target="_blank">Kode Pos Indonesia</a></h4>
-        <p>Simple app with React to find postal code</p>
+        <img src="assets/img/spora.png">
+        <h4><a href="https://github.com/cerc-undip/Spora-CodeIgniter" target="_blank">Spora</a></h4>
+        <p>An E-commerce website to sell products from abandoned societies whose have previously trained by volunteers who are also linked in this site. Built with Codeigniter.</p>
       </div>
     </div>
   </div>
