Add second section portfolios

--- a/index.html
+++ b/index.html
@@ -49,21 +49,45 @@
       <div class="thumbnail">
         <img src="assets/img/bef.png">
         <h4><a href="https://brebesedufair.org" target="_blank">Brebes Education Fair 2018</a></h4>
-        <p>Multi purpose websites for registration, print card, event data management for committee, participation confirmation using QR Code.</p>
+        <p>Multi purpose websites for registration, print card, event data management for committee, participation confirmation using QR Code. Built with Codeigniter with me as Fullstack Engineer.</p>
       </div>
     </div>
     <div class="col-xs-6 col-sm-4">
       <div class="thumbnail">
-        <img src="assets/img/metaflorist.png">
-        <h4><a href="http://metaflorist.com" target="_blank">Metaflorist</a></h4>
-        <p>Website to promote the great ability of people with mental disorders. Main features are landing page, admin page, shopping cart, product management.</p>
+        <img src="assets/img/sokowolu.png">
+        <h4><a href="http://sokowolu.com" target="_blank">Sokowolu Website</a></h4>
+        <p>A portfolio website built to present to Indonesian people how beautiful Sokowolu village is. Built with Codeigniter and me as a Fullstack Engineer.</p>
       </div>
     </div>
     <div class="col-xs-6 col-sm-4">
       <div class="thumbnail">
         <img src="assets/img/spora.png">
         <h4><a href="https://github.com/cerc-undip/Spora-CodeIgniter" target="_blank">Spora</a></h4>
-        <p>An E-commerce website to sell products from abandoned societies whose have previously trained by volunteers who are also linked in this site. Built with Codeigniter.</p>
+        <p>An E-commerce website to sell products from abandoned societies whose have previously trained by volunteers who are also linked in this site. Built with Codeigniter and me as a Back-end Engineer.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="row text-center">
+    <div class="col-xs-6 col-sm-4">
+      <div class="thumbnail">
+        <img src="assets/img/metaflorist.png">
+        <h4><a href="http://metaflorist.com" target="_blank">Metaflorist</a></h4>
+        <p>Website to promote the great ability of people with mental disorders. Main features are landing page, admin page, shopping cart, product management. Built with Codeigniter with me as Fullstack Engineer.</p>
+      </div>
+    </div>
+    <div class="col-xs-6 col-sm-4">
+      <div class="thumbnail">
+        <img src="assets/img/airport-mobile.png">
+        <h4><a href="https://github.com/fannyhasbi/bandara-react-native" target="_blank">Ahmad Yani Airport Flight Management</a></h4>
+        <p>A mobile information system built with React Native framework, RESTful web built with PHP using Flight micro-framework. It was a final project assignment.</p>
+      </div>
+    </div>
+    <div class="col-xs-6 col-sm-4">
+      <div class="thumbnail">
+        <img src="assets/img/cerc.png">
+        <h4><a href="http://cerc-undip.com" target="_blank">Computer Engineering Research Club</a></h4>
+        <p>A dynamic portfolio website, event management, dynamic gallery, project proposal applyment, share class materials. Have some different types of member and privileges. Built with Codeigniter and me as a Fullstack Engineer.</p>
       </div>
     </div>
   </div>
