--- a/index.html
+++ b/index.html
@@ -97,6 +97,43 @@
   <h2 class="heading text-center">SKILLS</h2>
   <div class="row">
     <div class="col-sm-6">
+      <h4 class="progress-heading">Linux</h4>
+      <div class="progress">
+        <div class="progress-bar progress-bar-custom-2" style="width: 90%"></div>
+      </div>
+
+      <h4 class="progress-heading">Node.js</h4>
+      <div class="progress">
+        <div class="progress-bar progress-bar-custom-4" style="width: 53%"></div>
+      </div>
+
+      <h4 class="progress-heading">React.js</h4>
+      <div class="progress">
+        <div class="progress-bar progress-bar-custom-2" style="width: 60%"></div>
+      </div>
+
+      <h4 class="progress-heading">React Native</h4>
+      <div class="progress">
+        <div class="progress-bar progress-bar-custom-1" style="width: 57%"></div>
+      </div>
+
+      <h4 class="progress-heading">Codeigniter</h4>
+      <div class="progress">
+        <div class="progress-bar progress-bar-custom-3" style="width: 90%"></div>
+      </div>
+    </div>
+
+    <div class="col-sm-6">
+      <h4 class="progress-heading">PHP</h4>
+      <div class="progress">
+        <div class="progress-bar progress-bar-custom-3" style="width: 94%"></div>
+      </div>
+      
+      <h4 class="progress-heading">SQL</h4>
+      <div class="progress">
+        <div class="progress-bar progress-bar-custom-1" style="width: 93%"></div>
+      </div>
+
       <h4 class="progress-heading">HTML</h4>
       <div class="progress">
         <div class="progress-bar progress-bar-custom-2" style="width: 90%"></div>
@@ -104,44 +141,12 @@
 
       <h4 class="progress-heading">CSS</h4>
       <div class="progress">
-        <div class="progress-bar progress-bar-custom-4" style="width: 80%"></div>
+        <div class="progress-bar progress-bar-custom-4" style="width: 75%"></div>
       </div>
 
       <h4 class="progress-heading">Javascript</h4>
       <div class="progress">
-        <div class="progress-bar progress-bar-custom-1" style="width: 70%"></div>
-      </div>
-
-      <h4 class="progress-heading">PHP</h4>
-      <div class="progress">
-        <div class="progress-bar progress-bar-custom-3" style="width: 93%"></div>
-      </div>
-      
-      <h4 class="progress-heading">SQL</h4>
-      <div class="progress">
-        <div class="progress-bar progress-bar-custom-1" style="width: 93%"></div>
-      </div>
-    </div>
-
-    <div class="col-sm-6">
-      <h4 class="progress-heading">Bootstrap</h4>
-      <div class="progress">
-        <div class="progress-bar progress-bar-custom-2" style="width: 87%"></div>
-      </div>
-
-      <h4 class="progress-heading">Codeigniter</h4>
-      <div class="progress">
-        <div class="progress-bar progress-bar-custom-3" style="width: 83%"></div>
-      </div>
-
-      <h4 class="progress-heading">Node.js</h4>
-      <div class="progress">
-        <div class="progress-bar progress-bar-custom-4" style="width: 50%"></div>
-      </div>
-
-      <h4 class="progress-heading">React.js</h4>
-      <div class="progress">
-        <div class="progress-bar progress-bar-custom-2" style="width: 60%"></div>
+        <div class="progress-bar progress-bar-custom-1" style="width: 80%"></div>
       </div>
     </div>
   </div>
