Add third section of portfolio

--- a/index.html
+++ b/index.html
@@ -91,6 +91,30 @@
       </div>
     </div>
   </div>
+
+  <div class="row text-center">
+    <div class="col-xs-6 col-sm-4">
+      <div class="thumbnail">
+        <img src="assets/img/panjaang.png">
+        <h4><a href="http://panjaang.ga" target="_blank">Panjaang.ga?</a></h4>
+        <p>A website used to extend the short url into a long url. Has a tracker for each URL. Made using Codeigniter and Bootstrap framework. Me as Fullstack Engineer.</p>
+      </div>
+    </div>
+    <div class="col-xs-6 col-sm-4">
+      <div class="thumbnail">
+        <img src="assets/img/tokolelang.png">
+        <h4><a href="https://github.com/tokopedia-devcamp" target="_blank">Tokolelang</a></h4>
+        <p>Mobile application to post product for auction and easily track the product bids. Built with Kotlin and Flight micro-framework for the RESTful web. Me as a Back-end Engineer.</p>
+      </div>
+    </div>
+    <div class="col-xs-6 col-sm-4">
+      <div class="thumbnail">
+        <img src="assets/img/apotek.png">
+        <h4><a href="https://github.com/fannyhasbi/apotek-react" target="_blank">Apotek Online</a></h4>
+        <p>Online pharmacy to sell drugs built with React.js and me as a Fullstack Engineer.</p>
+      </div>
+    </div>
+  </div>
 </div>
 
 <div id="skills" class="container-fluid">
