--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
 <div id="portfolio" class="container-fluid bg-odd">
   <h2 class="heading text-center">PORTFOLIO</h2>
   <div class="row text-center">
-    <div class="col-xs-6 col-sm-4">
+    <div class="col-xs-12 col-sm-4">
       <div class="thumbnail">
         <img src="assets/img/bef.png">
         <h4><a href="https://brebesedufair.org" target="_blank">Brebes Education Fair 2018</a></h4>
         <p>Multi purpose websites for registration, print card, event data management for committee, participation confirmation using QR Code. Built with Codeigniter with me as Fullstack Engineer.</p>
       </div>
     </div>
-    <div class="col-xs-6 col-sm-4">
+    <div class="col-xs-12 col-sm-4">
       <div class="thumbnail">
         <img src="assets/img/sokowolu.png">
         <h4><a href="http://sokowolu.com" target="_blank">Sokowolu Website</a></h4>
         <p>A portfolio website built to present to Indonesian people how beautiful Sokowolu village is. Built with Codeigniter and me as a Fullstack Engineer.</p>
       </div>
     </div>
-    <div class="col-xs-6 col-sm-4">
+    <div class="col-xs-12 col-sm-4">
       <div class="thumbnail">
         <img src="assets/img/spora.png">
         <h4><a href="https://github.com/cerc-undip/Spora-CodeIgniter" target="_blank">Spora</a></h4>
@@ -69,21 +69,21 @@
   </div>
 
   <div class="row text-center">
-    <div class="col-xs-6 col-sm-4">
+    <div class="col-xs-12 col-sm-4">
       <div class="thumbnail">
         <img src="assets/img/metaflorist.png">
         <h4><a href="http://metaflorist.com" target="_blank">Metaflorist</a></h4>
         <p>Website to promote the great ability of people with mental disorders. Main features are landing page, admin page, shopping cart, product management. Built with Codeigniter with me as Fullstack Engineer.</p>
       </div>
     </div>
-    <div class="col-xs-6 col-sm-4">
+    <div class="col-xs-12 col-sm-4">
       <div class="thumbnail">
         <img src="assets/img/airport-mobile.png">
         <h4><a href="https://github.com/fannyhasbi/bandara-react-native" target="_blank">Ahmad Yani Airport Flight Management</a></h4>
         <p>A mobile information system built with React Native framework, RESTful web built with PHP using Flight micro-framework. It was a final project assignment.</p>
       </div>
     </div>
-    <div class="col-xs-6 col-sm-4">
+    <div class="col-xs-12 col-sm-4">
       <div class="thumbnail">
         <img src="assets/img/cerc.png">
         <h4><a href="http://cerc-undip.com" target="_blank">Computer Engineering Research Club</a></h4>
@@ -93,21 +93,21 @@
   </div>
 
   <div class="row text-center">
-    <div class="col-xs-6 col-sm-4">
+    <div class="col-xs-12 col-sm-4">
       <div class="thumbnail">
         <img src="assets/img/panjaang.png">
         <h4><a href="http://panjaang.ga" target="_blank">Panjaang.ga?</a></h4>
         <p>A website used to extend the short url into a long url. Has a tracker for each URL. Made using Codeigniter and Bootstrap framework. Me as Fullstack Engineer.</p>
       </div>
     </div>
-    <div class="col-xs-6 col-sm-4">
+    <div class="col-xs-12 col-sm-4">
       <div class="thumbnail">
         <img src="assets/img/tokolelang.png">
         <h4><a href="https://github.com/tokopedia-devcamp" target="_blank">Tokolelang</a></h4>
         <p>Mobile application to post product for auction and easily track the product bids. Built with Kotlin and Flight micro-framework for the RESTful web. Me as a Back-end Engineer.</p>
       </div>
     </div>
-    <div class="col-xs-6 col-sm-4">
+    <div class="col-xs-12 col-sm-4">
       <div class="thumbnail">
         <img src="assets/img/apotek.png">
         <h4><a href="https://github.com/fannyhasbi/apotek-react" target="_blank">Apotek Online</a></h4>
@@ -178,7 +178,7 @@
 
 
 <footer class="container-fluid">
-  <p class="text-center">Made with love by me, <a href="https://github.com/fannyhasbi">Fanny Hasbi</a></p>
+  <p class="text-center">Made with &hearts; by me, <a href="https://github.com/fannyhasbi">Fanny Hasbi</a></p>
 </footer>
 
 </body>
