--- a/index.html
+++ b/index.html
@@ -3,9 +3,31 @@
 <head>
   <title>Fanny Hasbi</title>
   <meta charset="UTF-8">
-  <meta name="description" content="Fanny Hasbi's Portfolio Website"/>
+
+  <meta name="description" content="Fanny Hasbi Portfolio Website"/>
+  <meta name="keywords" content="Fanny, Hasbi, Fanny Hasbi, Portfolio, Software Engineer, Github Expert, Campus Expert, Student Intern, Indonesia, Universitas Diponegoro, Computer Engineering Student, Student Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#fff">
+  <meta name="theme-color" content="#45ada8">
+  <link rel="author" href="https://fannyhasbi.github.io">
+
+  <!-- Robot -->
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph Meta -->
+  <meta property="og:title" content="Fanny Hasbi Portfolio Website" />
+  <meta property="og:type" content="website">
+  <meta property="og:description" content="Fanny Hasbi, a Computer Engineering student who has a very high passion in Software Engineering" />
+  <meta property="og:url" content="https://fannyhasbi.github.io" />
+  <meta property="og:image" content="https://avatars1.githubusercontent.com/u/11705665?v=4&s=460" />
+
+  <!-- Twitter Meta -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@fannyhasbi" />
+  <meta name="twitter:creator" content="@fannyhasbi" />
+  <meta name="twitter:title" content="Fanny Hasbi" />
+  <meta name="twitter:description" content="Fanny Hasbi, a Computer Engineering student who has a very high passion in Software Engineering" />
+  <meta name="twitter:image" content="https://avatars1.githubusercontent.com/u/11705665?v=4&s=460" />
+
   <link rel="stylesheet" href="assets/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Cardo:400,700|Montserrat:400,700" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -17,11 +39,11 @@
 <div id="header" class="jumbotron text-center">
   <h1>Fanny Hasbi</h1>
   <p><i>Software Engineering Enthusiast</i></p>
-  <a href="https://www.facebook.com/fannyhasbi" target="_blank" class="link"><i class="fa fa-facebook-square fa-2x"></i></a>
-  <a href="https://instagram.com/fannyhasbi" target="_blank" class="link"><i class="fa fa-instagram fa-2x"></i></a>
-  <a href="https://github.com/fannyhasbi" target="_blank" class="link"><i class="fa fa-github fa-2x"></i></a>
-  <a href="https://twitter.com/fannyhasbi" target="_blank" class="link"><i class="fa fa-twitter fa-2x"></i></a>
-  <a href="https://www.linkedin.com/in/fannyhasbi/" target="_blank" class="link"><i class="fa fa-linkedin-square fa-2x"></i></a>
+  <a href="https://www.facebook.com/fannyhasbi" target="_blank" class="link" title="Fanny Hasbi Facebook" rel="dofollow"><i class="fa fa-facebook-square fa-2x"></i></a>
+  <a href="https://instagram.com/fannyhasbi" target="_blank" class="link" title="Fanny Hasbi Instagram" rel="dofollow"><i class="fa fa-instagram fa-2x"></i></a>
+  <a href="https://github.com/fannyhasbi" target="_blank" class="link" title="Fanny Hasbi Github" rel="dofollow"><i class="fa fa-github fa-2x"></i></a>
+  <a href="https://twitter.com/fannyhasbi" target="_blank" class="link" title="Fanny Hasbi Twitter" rel="dofollow"><i class="fa fa-twitter fa-2x"></i></a>
+  <a href="https://www.linkedin.com/in/fannyhasbi/" target="_blank" class="link" title="Fanny Hasbi Linkedin" rel="dofollow"><i class="fa fa-linkedin-square fa-2x"></i></a>
 </div>
 
 <div id="about" class="container-fluid">
@@ -47,22 +69,22 @@
   <div class="row text-center">
     <div class="col-xs-12 col-sm-4">
       <div class="thumbnail">
-        <img src="assets/img/bef.png">
-        <h4><a href="https://brebesedufair.org" target="_blank">Brebes Education Fair 2018</a></h4>
+        <img src="assets/img/bef.png" title="Brebes Education Fair 2018" alt="Fanny Hasbi - Brebes Education Fair">
+        <h4><a href="https://brebesedufair.org" target="_blank" title="Brebes Education Fair" rel="dofollow">Brebes Education Fair 2018</a></h4>
         <p>Multi purpose websites for registration, print card, event data management for committee, participation confirmation using QR Code. Built with Codeigniter with me as Fullstack Engineer.</p>
       </div>
     </div>
     <div class="col-xs-12 col-sm-4">
       <div class="thumbnail">
-        <img src="assets/img/sokowolu.png">
-        <h4><a href="http://sokowolu.com" target="_blank">Sokowolu Website</a></h4>
+        <img src="assets/img/sokowolu.png" title="Sokowolu" alt="Fanny Hasbi - Sokowolu">
+        <h4><a href="http://sokowolu.com" target="_blank" title="Sokowolu Village" rel="dofollow">Sokowolu Website</a></h4>
         <p>A portfolio website built to present to Indonesian people how beautiful Sokowolu village is. Built with Codeigniter and me as a Fullstack Engineer.</p>
       </div>
     </div>
     <div class="col-xs-12 col-sm-4">
       <div class="thumbnail">
-        <img src="assets/img/spora.png">
-        <h4><a href="https://github.com/cerc-undip/Spora-CodeIgniter" target="_blank">Spora</a></h4>
+        <img src="assets/img/spora.png" title="Spora" alt="Fanny Hasbi - Spora">
+        <h4><a href="https://github.com/cerc-undip/Spora-CodeIgniter" target="_blank" title="Spora" rel="nofollow">Spora</a></h4>
         <p>An E-commerce website to sell products from abandoned societies whose have previously trained by volunteers who are also linked in this site. Built with Codeigniter and me as a Back-end Engineer.</p>
       </div>
     </div>
@@ -71,22 +93,22 @@
   <div class="row text-center">
     <div class="col-xs-12 col-sm-4">
       <div class="thumbnail">
-        <img src="assets/img/metaflorist.png">
-        <h4><a href="http://metaflorist.com" target="_blank">Metaflorist</a></h4>
+        <img src="assets/img/metaflorist.png" title="Metalforist" alt="Fanny Hasbi - Metalforist">
+        <h4><a href="http://metaflorist.com" target="_blank" title="Metalforist" rel="dofollow">Metaflorist</a></h4>
         <p>Website to promote the great ability of people with mental disorders. Main features are landing page, admin page, shopping cart, product management. Built with Codeigniter with me as Fullstack Engineer.</p>
       </div>
     </div>
     <div class="col-xs-12 col-sm-4">
       <div class="thumbnail">
-        <img src="assets/img/airport-mobile.png">
-        <h4><a href="https://github.com/fannyhasbi/bandara-react-native" target="_blank">Ahmad Yani Airport Flight Management</a></h4>
+        <img src="assets/img/airport-mobile.png" title="Ahmad Yani Airport Flight Management" alt="Fanny Hasbi - Ahmad Yani Airport Flight Management">
+        <h4><a href="https://github.com/fannyhasbi/bandara-react-native" target="_blank" title="Bandara React Native" rel="nofollow">Ahmad Yani Airport Flight Management</a></h4>
         <p>A mobile information system built with React Native framework, RESTful web built with PHP using Flight micro-framework. It was a final project assignment.</p>
       </div>
     </div>
     <div class="col-xs-12 col-sm-4">
       <div class="thumbnail">
-        <img src="assets/img/cerc.png">
-        <h4><a href="http://cerc-undip.com" target="_blank">Computer Engineering Research Club</a></h4>
+        <img src="assets/img/cerc.png" title="Computer Engineering Research Club" alt="Fanny Hasbi - Computer Engineering Research Club">
+        <h4><a href="http://cerc-undip.com" target="_blank" title="Computer Engineering Research Club UNDIP" rel="dofollow">Computer Engineering Research Club</a></h4>
         <p>A dynamic portfolio website, event management, dynamic gallery, project proposal applyment, share class materials. Have some different types of member and privileges. Built with Codeigniter and me as a Fullstack Engineer.</p>
       </div>
     </div>
@@ -95,22 +117,22 @@
   <div class="row text-center">
     <div class="col-xs-12 col-sm-4">
       <div class="thumbnail">
-        <img src="assets/img/panjaang.png">
-        <h4><a href="http://panjaang.ga" target="_blank">Panjaang.ga?</a></h4>
+        <img src="assets/img/panjaang.png" title="Panjaang.ga" alt="Fanny Hasbi - Panjaang.ga URL Extender">
+        <h4><a href="http://panjaang.ga" target="_blank" title="Panjaang.ga" rel="nofollow">Panjaang.ga?</a></h4>
         <p>A website used to extend the short url into a long url. Has a tracker for each URL. Made using Codeigniter and Bootstrap framework. Me as Fullstack Engineer.</p>
       </div>
     </div>
     <div class="col-xs-12 col-sm-4">
       <div class="thumbnail">
-        <img src="assets/img/tokolelang.png">
-        <h4><a href="https://github.com/tokopedia-devcamp" target="_blank">Tokolelang</a></h4>
+        <img src="assets/img/tokolelang.png" title="Tokolelang" alt="Fanny Hasbi - Tokolelang">
+        <h4><a href="https://github.com/tokopedia-devcamp" target="_blank"title="Tokolelang" rel="nofollow">Tokolelang</a></h4>
         <p>Mobile application to post product for auction and easily track the product bids. Built with Kotlin and Flight micro-framework for the RESTful web. Me as a Back-end Engineer.</p>
       </div>
     </div>
     <div class="col-xs-12 col-sm-4">
       <div class="thumbnail">
-        <img src="assets/img/apotek.png">
-        <h4><a href="https://github.com/fannyhasbi/apotek-react" target="_blank">Apotek Online</a></h4>
+        <img src="assets/img/apotek.png" title="Apotek React.js" alt="Fanny Hasbi - Apotek React.js">
+        <h4><a href="https://github.com/fannyhasbi/apotek-react" target="_blank" title="Apotek Online with React" rel="nofollow">Apotek Online</a></h4>
         <p>Online pharmacy to sell drugs built with React.js and me as a Fullstack Engineer.</p>
       </div>
     </div>
@@ -178,7 +200,7 @@
 
 
 <footer class="container-fluid">
-  <p class="text-center">Made with &hearts; by me, <a href="https://github.com/fannyhasbi">Fanny Hasbi</a></p>
+  <p class="text-center">Made with &hearts; by me, <a href="https://github.com/fannyhasbi" title="Fanny Hasbi - Github" rel="dofollow">Fanny Hasbi</a></p>
 </footer>
 
 </body>
