--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#45ada8">
   <link rel="author" href="https://fannyhasbi.github.io">
+  <link rel="icon" href="assets/img/favicon.ico">
 
   <!-- Robot -->
   <meta name="robots" content="index, follow" />
