Add encryption to content

--- a/special/index.html
+++ b/special/index.html
@@ -18,23 +18,24 @@
 		<div class="wrap-contact100">
 			<form class="contact100-form validate-form">
 				<span class="contact100-form-title">
-					Hello, Special!
+					Hello, <span id="special-title"></span>!
 				</span>
 
 				<div class="wrap-input100 validate-input" data-validate="Name is required">
 					<span class="label-input100">Miracle Word</span>
-					<input id="miracle_word" class="input100" type="text" name="miracle_word" placeholder="Please enter the miracle word">
+					<input id="miracle-word" class="input100" type="text" name="miracle_word" placeholder="Please enter the miracle word">
 					<span class="focus-input100"></span>
 				</div>
 
 				<div class="container-contact100-form-btn">
 					<div class="wrap-contact100-form-btn">
 						<div class="contact100-form-bgbtn"></div>
-						<button class="contact100-form-btn">
+						<button id="magic-button" class="contact100-form-btn" type="button">
 							<span>
 								See Magic
-								<i class="fa fa-magic m-l-7" aria-hidden="true"></i>
-							</span>
+                <i class="fa fa-magic m-l-7" aria-hidden="true"></i>
+              </span>
+
 						</button>
 					</div>
 				</div>
@@ -47,5 +48,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<script src="js/main.js"></script>
+  <script src="js/special.js"></script>
 </body>
 </html>
