--- a/special/index.html
+++ b/special/index.html
@@ -16,18 +16,18 @@
 <body>
 	<div class="container-contact100">
 		<div class="wrap-contact100">
-			<form class="contact100-form validate-form">
+			<form class="contact100-form validate-form" onsubmit="return false">
 				<span class="contact100-form-title">
-					Hello, <span id="special-title"></span>!
+					<span id="special-title"></span>!
 				</span>
 
-				<div class="wrap-input100 validate-input" data-validate="Name is required">
+				<div class="initial-magic wrap-input100 validate-input" data-validate="Not a good mantra :(">
 					<span class="label-input100">Miracle Word</span>
 					<input id="miracle-word" class="input100" type="text" name="miracle_word" placeholder="Please enter the miracle word">
 					<span class="focus-input100"></span>
 				</div>
 
-				<div class="container-contact100-form-btn">
+				<div class="initial-magic container-contact100-form-btn">
 					<div class="wrap-contact100-form-btn">
 						<div class="contact100-form-bgbtn"></div>
 						<button id="magic-button" class="contact100-form-btn" type="button">
@@ -39,6 +39,18 @@
 						</button>
 					</div>
 				</div>
+
+				<div id="magic-success" class="container-contact100-form-btn" style="display: none;">
+					<div class="wrap-contact100-form-btn">
+						<div class="contact100-form-bgbtn"></div>
+						<a href="#" id="gift-button" class="contact100-form-btn">
+							<span>
+								Open Gift
+                <i class="fa fa-rocket m-l-7" aria-hidden="true"></i>
+              </span>
+						</a>
+					</div>
+				</div>
 			</form>
 		</div>
 	</div>
@@ -47,7 +59,6 @@
   <script src="vendor/animsition/js/animsition.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-	<script src="js/main.js"></script>
   <script src="js/special.js"></script>
 </body>
 </html>
