--- a/index.html
+++ b/index.html
@@ -26,5 +26,23 @@
       </div>
     </div>
   </div>
+
+  <div id="about" class="container">
+    <div class="columns">
+      <div class="column col-sm-12 col-lg-6">
+        <img src="https://avatars1.githubusercontent.com/u/11705665?v=4&s=460" class="img-responsive s-circle" alt="Fanny Hasbi" title="Fanny Hasbi">
+      </div>
+      <div class="column col-sm-12 col-lg-6">
+        <h3 class="text-center text-uppercase">ABOUT ME</h3>
+        <p class="text-justify">
+          I come from Brebes, Indonesia. I am a student of Computer Engineering at Diponegoro University since 2016. I focus on server-side development, and I have experienced in PHP and Javascript with its frameworks. I learned programming since 2014 with Javascript.
+        </p>
+        <p class="text-justify">
+          I have completed several projects from small to large scale. Now, I'm still working on several projects while I am studying new technology. I am really enthusiastic participating in technology events and competitions.
+        </p>
+      </div>
+    </div>
+  </div>
+
 </body>
 </html>
