--- a/index.html
+++ b/index.html
@@ -2,10 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Fanny Hasbi</title>
 
+  <!-- Custom Metas -->
+  <meta name="description" content="Fanny Hasbi Portfolio Website"/>
+  <meta name="keywords" content="Fanny, Hasbi, Fanny Hasbi, Portfolio, Software Engineer, Student Intern, Indonesia, Universitas Diponegoro, Computer Engineering Student, Student Portfolio">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <meta name="theme-color" content="#45ada8"> -->
+  <meta name="google-site-verification" content="vtIv4xLlRsBryoPpBxNvZvbt_wBY8Tw2hM8KyoeuSUo" />
+  <link rel="author" href="https://fannyhasbi.github.io">
+  <link rel="icon" href="assets/img/favicon.ico">
+
+  <!-- Robot -->
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph Meta -->
+  <meta property="og:title" content="Fanny Hasbi Portfolio Website" />
+  <meta property="og:type" content="website">
+  <meta property="og:description" content="Fanny Hasbi, a Computer Engineering student who has a very high passion in Software Engineering" />
+  <meta property="og:url" content="https://fannyhasbi.github.io" />
+  <meta property="og:image" content="https://avatars1.githubusercontent.com/u/11705665?v=4&s=460" />
+
+  <!-- Twitter Meta -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@fannyhasbi" />
+  <meta name="twitter:creator" content="@fannyhasbi" />
+  <meta name="twitter:title" content="Fanny Hasbi" />
+  <meta name="twitter:description" content="Fanny Hasbi, a Computer Engineering student who has a very high passion in Software Engineering" />
+  <meta name="twitter:image" content="https://avatars1.githubusercontent.com/u/11705665?v=4&s=460" />
+
+  <!-- Styles -->
   <link rel="stylesheet" href="assets/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
   <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-exp.min.css">
