--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
   <div id="about" class="container">
     <div class="columns">
-      <div class="column col-sm-12 col-lg-6">
-        <img src="https://avatars1.githubusercontent.com/u/11705665?v=4&s=460" class="img-responsive s-circle" alt="Fanny Hasbi" title="Fanny Hasbi">
+      <div class="column col-sm-12 col-lg-6 text-center">
+        <img src="https://avatars1.githubusercontent.com/u/11705665?v=4&s=460" class="img-responsive s-circle" alt="Fanny Hasbi" title="Fanny Hasbi" width="300" height="300">
       </div>
       <div class="column col-sm-12 col-lg-6">
         <h3 class="text-center text-uppercase">ABOUT ME</h3>
@@ -70,6 +70,10 @@
       </div>
     </div>
   </div>
+  
+  <footer>
+    <p class="text-center">Made with &hearts; by me, <a href="https://github.com/fannyhasbi" title="Fanny Hasbi - Github" rel="dofollow">Fanny Hasbi</a></p>
+  </footer>
 
 </body>
 </html>
